@@ -67,6 +67,7 @@ class IPBlockForm {
 		# Re-check user's rights to hide names, very serious, defaults to 0
 		$this->BlockHideName = ( $wgRequest->getBool( 'wpHideName', 0 ) && $wgUser->isAllowed( 'hideuser' ) ) ? 1 : 0;
 		$this->BlockAllowUsertalk = ( $wgRequest->getBool( 'wpAllowUsertalk', $byDefault ) && $wgBlockAllowsUTEdit );
+		$this->BlockReblock = $wgRequest->getBool( 'wpChangeBlock', false );
 	}
 
 	function showForm( $err ) {
@@ -86,10 +87,19 @@ class IPBlockForm {
 		$mIpbreason = Xml::label( wfMsg( 'ipbotherreason' ), 'mw-bi-reason' );
 
 		$titleObj = SpecialPage::getTitleFor( 'Blockip' );
-
-		if ( "" != $err ) {
+		
+		$alreadyBlocked = false;
+		if ( $err && $err[0] != 'ipb_already_blocked' ) {
+			$key = array_shift($err);
+			$msg = wfMsgReal($key, $err);
 			$wgOut->setSubtitle( wfMsgHtml( 'formerror' ) );
-			$wgOut->addHTML( Xml::tags( 'p', array( 'class' => 'error' ), $err ) );
+			$wgOut->addHTML( Xml::tags( 'p', array( 'class' => 'error' ), $msg ) );
+		} elseif ( $this->BlockAddress ) {
+			$currentBlock = Block::newFromDB( $this->BlockAddress );
+			if ( !is_null($currentBlock) && !$currentBlock->mAuto && !($currentBlock->mRangeStart && $currentBlock->mAddress != $this->BlockAddress) ) {
+				$wgOut->addWikiMsg( 'ipb-needreblock', $this->BlockAddress );
+				$alreadyBlocked = true;
+			}
 		}
 
 		$scBlockExpiryOptions = wfMsgForContent( 'ipboptions' );
@@ -253,6 +263,18 @@ class IPBlockForm {
 				</tr>"
 			);
 		}
+		if ( $alreadyBlocked ) {
+			$wgOut->addHTML("
+				<tr id='wpChangeBlockRow'>
+					<td>&nbsp;</td>
+					<td class='mw-input'>" .
+						Xml::checkLabel( wfMsg( 'ipb-change-block' ),
+							'wpChangeBlock', 'wpChangeBlock', $this->BlockReblock,
+							array( 'tabindex' => '13' ) ) . "
+					</td>
+				</tr>"
+			);
+		}
 
 		$wgOut->addHTML("
 			<tr>
@@ -379,9 +401,18 @@ class IPBlockForm {
 		if ( wfRunHooks('BlockIp', array(&$block, &$wgUser)) ) {
 
 			if ( !$block->insert() ) {
-				return array('ipb_already_blocked', htmlspecialchars($this->BlockAddress));
+				if ( !$this->BlockReblock ) {
+					return array( 'ipb_already_blocked' );
+				} else {
+					# This returns direct blocks before autoblocks/rangeblocks, since we should be sure the user is blocked by now it should work for our purposes
+					$currentBlock = Block::newFromDB( $this->BlockAddress );
+					$currentBlock->delete();
+					$block->insert();
+					$log_action = 'reblock';
+				}
+			} else {
+				$log_action = 'block';
 			}
-
 			wfRunHooks('BlockIpComplete', array($block, $wgUser));
 
 			if ( $this->BlockWatchUser ) { 
@@ -396,7 +427,7 @@ class IPBlockForm {
 			# Make log entry, if the name is hidden, put it in the oversight log
 			$log_type = ($this->BlockHideName) ? 'suppress' : 'block';
 			$log = new LogPage( $log_type );
-			$log->addEntry( 'block', Title::makeTitle( NS_USER, $this->BlockAddress ),
+			$log->addEntry( $log_action, Title::makeTitle( NS_USER, $this->BlockAddress ),
 			  $reasonstr, $logParams );
 
 			# Report to the user
@@ -420,8 +451,7 @@ class IPBlockForm {
 				urlencode( $this->BlockAddress ) ) );
 			return;
 		}
-		$key = array_shift($retval);
-		$this->showForm(wfMsgReal($key, $retval));
+		$this->showForm( $retval );
 	}
 
 	function showSuccess() {
