@@ -179,6 +179,9 @@ The following extensions are migrated into MediaWiki 1.14:
 * Make search matches bold only, not red as well
 * Added 'UserRights::showEditUserGroupsForm' hook to allow extensions to alter
   the groups that the user can be added to or removed from in Special:UserRights
+* (bug 10080) Blocks can be modified without unblocking first
+* (bug 15820) Special:BlockIP shows a notice if the user being blocked is already
+  directly blocked
 
 === Bug fixes in 1.14 ===
 
